rollout/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-rollout
spec:
  ports:
  - name: 80-tcp
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: rollouts-demo
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-preview
spec:
  ports:
  - name: 80-tcp
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: rollouts-demo
  sessionAffinity: None
  type: ClusterIP
